# check_multi_url

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
check_multi_url/: __init__.py  main.py
scripts/: check_multi_url
tests/: test1.py
